style(logo) fixes new z-index
so that the logo doenst disapear on page-transitions for desktop

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -87,7 +87,7 @@ li {
 
 .logo {
   position: fixed;
-  z-index: 10;
+  z-index: 19;
   top: var(--s-gutter);
   left: var(--s-gutter);
   margin-top: -0.5em;
